[package]
name = "psp_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
postgres = { version = "0.19.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "chrono"] }
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
validator = { version = "0.16.1", features = ["derive"] }
